Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-16890

Display glitch in registry editor "export" dialog (top left)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • None
    • None

    Description

      Regedit : Display glitch in "export" dialog, due to broken comdlg32.dll

      reactos-bootcd-0.4.14-dev-1455-g963d39b-x86-gcc-lin-dbg

      This Ticket is related to the top-left part of the screenshot and due to ComDlg in Wine

      This is due to a too narrow array "WCHAR buf[16];" in filedlg.c ComDlg ressource.

      Attachments

        1. Sans titre.png
          28 kB
          Kyle_Katarn
        2. en-US.png
          38 kB
          reactosfanboy
        3. fixed.png
          18 kB
          Kyle_Katarn

        Issue Links

          Activity

            People

              sdever sdever
              Kyle_Katarn Kyle_Katarn
              Votes:
              2 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: