[COMDLG32][REGEDIT] Fix display problems (CORE-16890) (#2638)